--- a/src/key/Cargo.toml
+++ b/src/key/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "secret_oracle_backend"
+name = "key"
 version = "0.1.0"
 edition = "2021"
 
@@ -12,3 +12,5 @@ crate-type = ["cdylib"]
 candid = "0.8"
 ic-cdk = "0.7"
 ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
+hex = "0.4"
+serde = "1"
