--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "webpack serve --mode development --env development",
     "deploy:local": "dfx deploy --network=local",
     "deploy:ic": "dfx deploy --network=ic",
-    "generate": "dfx generate vetkd_backend"
+    "generate": "dfx generate simple_oracle"
   },
   "dependencies": {
     "@dfinity/agent": "^0.18.1",
